# text-to-sql-agent

./: .architect.instructions.md  .developer.instructions.md  .documentarian.instructions.md  .env  .env.dev  .env.prod  .env.test  .envrc  .gitignore  .taskmanager.instructions.md  .tester.instructions.md  CONTRIBUTING.md  README.md  main.py  main_chainlit.py  main_streamlit.py  main_terminal.py  pyproject.toml  run_main_chainlit.sh  run_main_streamlit.sh  run_mcp_server_athena.sh  run_mcp_server_postgresql.sh  run_mcp_server_sqlite.sh
.agentbridge/: conversation.db  conversation.db-shm  conversation.db-wal
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: task-trace-check.yml
docs/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  FUNCTIONAL_STYLE_REVIEW_CHECKLIST.md  JETBRAINS_VENV_CHECKLIST.md  PROMPT_CHANGE_REQUEST_PROCESS.md  PROMPT_EVALUATION_GATES.md  PROMPT_MANIFEST_ENTERPRISE.md  PROMPT_MANIFEST_MVP.md  PROMPT_STORAGE_VERSION_REGISTRY.md  PROMPT_USER_OVERRIDE_POLICY.md  RFC_FUNCTIONAL_STYLE.md  SQL_DIALECT_SCOPE.md  TASKS.md  WORKLOG.md
src/text_to_sql_agent/agents/: __init__.py  analytics_agent.py  export_agent.py  human_approval_agent.py  insights_agent.py  query_execution_agent.py  schema_context_agent.py  schema_reader_agent.py  security_guard_agent.py  sql_generator_agent.py  syntax_validator_agent.py
src/text_to_sql_agent/config/: __init__.py  logging.py  secrets.py  settings.py
src/text_to_sql_agent/graphs/: __init__.py  query_graph.py  state.py  (+3 more)
tests/: conftest.py
tests/text_to_sql_agent/: README.md
(+136 files in other folders)
