[project]
name = "text-to-sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "chainlit>=2.9.2",
    "chromadb>=1.5.9",
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "loguru>=0.7.3",
    "mypy>=2.0.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "postgresql-mcp-server>=1.1.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "sqlite-mcp-server>=0.1.7",
]
